# hho-demo-1d

./: CMakeLists.txt  README.md  basis.hpp  common.h  conjugate_gradient.hpp  diffusion_demo.hpp  element.hpp  gr_demo.hpp  gradient_reconstruction.hpp  hho-demo-1d.cpp  projector.hpp  projector_demo.hpp  quadrature.hpp  stabilization.hpp
